Ook toepassingen Newton (rest)

--- a/6dejaar/dynamica/exercises/lib/2d_I_1.tex
+++ b/6dejaar/dynamica/exercises/lib/2d_I_1.tex
@@ -11,7 +11,7 @@
 %
 %\begin{figure}[H]
 %\centering
-%\includegraphics[width=0.6\textwidth]{14p88}
+%\includegraphics[width=0.6\textwidth]{dyn/exercises/14p88}
 %\end{figure}
 \begin{minipage}[t]{.3\textwidth}
 \begin{enumerate}
@@ -24,7 +24,7 @@
 \hfill
 \begin{minipage}[t]{.5\textwidth}
 	\raisebox{1ex-\height}{%
-		\includegraphics[width=\textwidth]{14p88}} 
+		\includegraphics[width=\textwidth]{dyn/exercises/14p88}} 
 \end{minipage}
 \begin{oplossing}
 % \newline
