--- a/6dejaar/dynamica/exercises/lib/2d_I_2.tex
+++ b/6dejaar/dynamica/exercises/lib/2d_I_2.tex
@@ -12,7 +12,7 @@ Een bal K gooi je vooruit en een bal L gooi je tegelijk naar beneden. Ze komen t
 \hfill
 \begin{minipage}[t]{.4\textwidth}
 	\raisebox{1ex-\height}{%
-		\includegraphics[width=\textwidth]{6p92}} 
+		\includegraphics[width=\textwidth]{dyn/exercises/6p92}} 
 \end{minipage}
 \begin{oplossing}
 % \newline
