--- a/6dejaar/dynamica/exercises/lib/2d_abstract_I_2.tex
+++ b/6dejaar/dynamica/exercises/lib/2d_abstract_I_2.tex
@@ -40,7 +40,7 @@ Als we alleen positieve tijdstippen bekijken, houden we $t=\SI{1}{s}$ over.
 \item[(d)]De snelheidsvector is getekend in de figuur.
 \begin{figure}[ht!]
 \begin{picture}(390,160)(0,0)
-\put(130,0){\includegraphics[width=0.3\textwidth]{12p53}}
+\put(130,0){\includegraphics[width=0.3\textwidth]{dyn/exercises/12p53}}
 \put(200,30){$\vec{v}_x$}
 \put(200,65){$\vec{v}$}
 \put(150,70){$\vec{v}_y$}
