--- a/6dejaar/dynamica/exercises/lib/FV_T4_5p188.tex
+++ b/6dejaar/dynamica/exercises/lib/FV_T4_5p188.tex
@@ -8,7 +8,7 @@
 \pt{5}Een blok van $\SI{10}{kg}$ glijdt vanop een hoogte van $\SI{2,0}{m}$ en vanuit rust langs een gladde helling naar beneden. Onderaan botst het blok tegen een veer met veerconstante $\SI{100}{N/m}$ en drukt de veer in.
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.6\textwidth]{FV_5p188}
+\includegraphics[width=0.6\textwidth]{dyn/exercises/FV_5p188}
 \end{figure}
 \begin{enumerate}
 \item Hoe groot is die indrukking?
