--- a/6dejaar/dynamica/exercises/lib/buffel.tex
+++ b/6dejaar/dynamica/exercises/lib/buffel.tex
@@ -12,7 +12,7 @@
 \item[\textit{Oplossing}]De snelheden worden in onderstaande figuur weergegeven.
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.7\textwidth]{4p49}
+\includegraphics[width=0.7\textwidth]{dyn/exercises/4p49}
 \end{center}
 \end{figure}
 De tijd die nodig is om de overkant te bereiken vinden we eenvoudigweg door de afstand te delen door de snelheid die de buffel loodrecht op oever heeft. De snelheid van de stroming heeft hierop immers geen invloed.
