--- a/6dejaar/dynamica/exercises/lib/dyn_FV_9p143.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_FV_9p143.tex
@@ -24,7 +24,7 @@
 \begin{minipage}[t]{.2\linewidth}
 %\flushright
 	\raisebox{1ex-\height}{%
-		\includegraphics[width=\textwidth]{9p143}%
+		\includegraphics[width=\textwidth]{dyn/exercises/9p143}%
 		} 
 \end{minipage}
 
