--- a/6dejaar/dynamica/exercises/lib/dyn_III_2.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_III_2.tex
@@ -11,7 +11,7 @@ Een munt met een massa van \SI{3,0}{g} ligt op een blokje van \SI{20,0}{g}. Het 
 \hfill
 \begin{minipage}[t]{.3\linewidth}
 	\raisebox{1ex-\height}{%
-    	\includegraphics[width=\linewidth]{muntblokjeopschijf}%
+    	\includegraphics[width=\linewidth]{dyn/exercises/muntblokjeopschijf}%
   	}%
 \end{minipage}
 
