--- a/6dejaar/dynamica/exercises/lib/dyn_II_2.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_II_2.tex
@@ -5,7 +5,7 @@
 \begin{oplossing}
 \begin{figure}[h]
 \begin{center}
-\includegraphics[width=0.5\textwidth ,angle=0]{hockeypuck2}
+\includegraphics[width=0.5\textwidth ,angle=0]{dyn/exercises/hockeypuck2}
 \end{center}
 \end{figure}
 \newline
