--- a/6dejaar/dynamica/exercises/lib/dyn_II_3.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_II_3.tex
@@ -16,7 +16,7 @@ Bepaal de grootte van de versnelling van beide massa's en de spankracht in het t
 \begin{minipage}[t]{.2\textwidth}
 \flushright
 	\raisebox{1ex-\height}{%
-		\includegraphics[height=4cm]{toestelatwood}
+		\includegraphics[height=4cm]{dyn/exercises/toestelatwood}
 	}
 \end{minipage}
 
