--- a/6dejaar/dynamica/exercises/lib/dyn_II_4.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_II_4.tex
@@ -11,7 +11,7 @@ Hoe groot moet de wrijgvingsco\"effici\"ent tussen de massa en de tafel minstens
 \hfill
 \begin{minipage}[t]{.33\linewidth}
 	\raisebox{1ex-\height}{%
-    	\includegraphics[width=\linewidth]{FV6p153}
+    	\includegraphics[width=\linewidth]{dyn/exercises/FV6p153}
   	}%
 \end{minipage}
 
