--- a/6dejaar/dynamica/exercises/lib/dyn_II_5.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_II_5.tex
@@ -11,7 +11,7 @@
 \hfill
 \begin{minipage}[t]{.37\linewidth}
 	\raisebox{1ex-\height}{%
-		\includegraphics[width=\textwidth]{drieblokken_2}%
+		\includegraphics[width=\textwidth]{dyn/exercises/drieblokken_2}%
 		} 
 \end{minipage}
 
