--- a/6dejaar/dynamica/exercises/lib/dyn_I_1.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_I_1.tex
@@ -5,7 +5,7 @@
 \newline
 %\begin{figure}[h]
 %\begin{center}
-%\includegraphics[width=0.4\textwidth]{doos_kracht}
+%\includegraphics[width=0.4\textwidth]{dyn/exercises/doos_kracht}
 %\end{center}
 %\end{figure}
 %\newline
@@ -21,7 +21,7 @@
 \vtop{%
   \vskip-1ex
   \hbox{%
-    \includegraphics[width=\linewidth]{doos_kracht}%
+    \includegraphics[width=\linewidth]{dyn/exercises/doos_kracht}%
   }%
 }
 \end{minipage}
