--- a/6dejaar/dynamica/exercises/lib/dyn_newton_I_4.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_newton_I_4.tex
@@ -11,7 +11,7 @@
 \hfill
 \begin{minipage}[t]{.37\linewidth}
 	\raisebox{6ex-\height}{%
-		\includegraphics[width=\textwidth]{jza0018l}%
+		\includegraphics[width=\textwidth]{./dyn/exercises/jza0018l}%
 		} 
 \end{minipage}
 
