--- a/6dejaar/dynamica/exercises/lib/veerman.tex
+++ b/6dejaar/dynamica/exercises/lib/veerman.tex
@@ -17,7 +17,7 @@
 geen snelheid zal hebben. 
 \begin{figure}[h]
 \centering
-\includegraphics[width=0.45\textwidth]{vectoren_veerman}
+\includegraphics[width=0.45\textwidth]{dyn/exercises/vectoren_veerman}
 \end{figure}
 \newline
 De hoek vinden we dan als volgt (zie figuur):
