--- a/6dejaar/dynamica/exercises/toepimport.tex
+++ b/6dejaar/dynamica/exercises/toepimport.tex
@@ -1,6 +1,6 @@
-%\documentclass{ximera}
+\documentclass{ximera}
 
-\input{../../../../preamble}
+\input{../../../preamble}
 
 
 \begin{document}
@@ -10,17 +10,16 @@
 \section{Newton}
 
 
-\input{./lib/dyn_newton_I_1} % touwtrekken
-\input{./lib/dyn_newton_I_2} % Inzicht 2de wet van Newton
-\input{./lib/dyn_newton_I_3} % Roeibootje. Inzicht 2de en 3de wet van Newton
+% \input{./lib/dyn_newton_I_1} % touwtrekken
+% \input{./lib/dyn_newton_I_2} % Inzicht 2de wet van Newton
+% \input{./lib/dyn_newton_I_3} % Roeibootje. Inzicht 2de en 3de wet van Newton
 \input{./lib/dyn_newton_I_4} % Inzicht in de 2e en 3e wet van Newton
-\input{./lib/dyn_newton_I_5} % Eekhoorntje en nootjes	
-\input{./lib/dyn_newton_I_6} % Tegen de wand van een schip duwen.
-\input{./lib/dyn_newton_I_7} % Traagheid
-\input{./lib/dyn_newton_I_8} % Aarde en appel
-\input{./lib/dyn_theorie_2} % Dynamica EVRB
-\input{./lib/dyn_theorie_3}
-
+% \input{./lib/dyn_newton_I_5} % Eekhoorntje en nootjes	
+% \input{./lib/dyn_newton_I_6} % Tegen de wand van een schip duwen.
+% \input{./lib/dyn_newton_I_7} % Traagheid
+% \input{./lib/dyn_newton_I_8} % Aarde en appel
+% \input{./lib/dyn_theorie_2} % Dynamica EVRB
+% \input{./lib/dyn_theorie_3}
 
 
 \section{Newton Toepassingen}
@@ -35,7 +34,7 @@
 \input{./lib/dyn_II_2} % hockeyschijf
 \input{./lib/dyn_II_3} % Toestel van Atwood
 \input{./lib/dyn_II_4} % FV 6 p. 153
-\input{./lib/dyn_II_5} % Blokken op een tafel
+%%TODO includes pdf ... %% \input{./lib/dyn_II_5} % Blokken op een tafel
 \input{./lib/dyn_II_6} % Ontsnappen langs een touw
 \input{./lib/dyn_III_1} % Drie voorwerpen 16de VFO 2004
 \input{./lib/dyn_III_2} % munt en blokje op een draaiende schijf
