--- a/6dejaar/dynamica/exercises/lib/dyn_II_2.tex
+++ b/6dejaar/dynamica/exercises/lib/dyn_II_2.tex
@@ -8,15 +8,17 @@
 \includegraphics[width=0.5\textwidth ,angle=0]{dyn/exercises/hockeypuck2}
 \end{center}
 \end{figure}
-\newline
-\item [\textit{gegeven}]
+
+\textit{gegeven}
 \begin{tabular}[t]{lcl}
 $v_0$ &$=$& $20,5~\rm m/s$\\
 $x$ &$=$& $120~\rm m$\\
 \end{tabular}
-\item [\textit{gevraagd}]
+
+\textit{gevraagd}
 $\mu$
-\item [\textit{oplossing}]
+
+\textit{oplossing}
 De wrijvingskracht is de enige kracht volgens de horizontale
 richting en vormt dus de resulterende kracht. Omdat ze tegengesteld
 is aan de $x$-as geldt $F_{w,x}=-F_w$. Met $F_w=\mu F_n$ vinden we
