--- a/6dejaar/dynamica/exercises/toepimport.tex
+++ b/6dejaar/dynamica/exercises/toepimport.tex
@@ -1,4 +1,4 @@
-%\documentclass{ximera}
+\documentclass{ximera}
 
 \input{../../../preamble}
 
@@ -10,16 +10,16 @@
 \section{Newton}
 
 
-% \input{./lib/dyn_newton_I_1} % touwtrekken
-% \input{./lib/dyn_newton_I_2} % Inzicht 2de wet van Newton
-% \input{./lib/dyn_newton_I_3} % Roeibootje. Inzicht 2de en 3de wet van Newton
+\input{./lib/dyn_newton_I_1} % touwtrekken
+\input{./lib/dyn_newton_I_2} % Inzicht 2de wet van Newton
+\input{./lib/dyn_newton_I_3} % Roeibootje. Inzicht 2de en 3de wet van Newton
 \input{./lib/dyn_newton_I_4} % Inzicht in de 2e en 3e wet van Newton
-% \input{./lib/dyn_newton_I_5} % Eekhoorntje en nootjes	
-% \input{./lib/dyn_newton_I_6} % Tegen de wand van een schip duwen.
-% \input{./lib/dyn_newton_I_7} % Traagheid
-% \input{./lib/dyn_newton_I_8} % Aarde en appel
-% \input{./lib/dyn_theorie_2} % Dynamica EVRB
-% \input{./lib/dyn_theorie_3}
+\input{./lib/dyn_newton_I_5} % Eekhoorntje en nootjes	
+\input{./lib/dyn_newton_I_6} % Tegen de wand van een schip duwen.
+\input{./lib/dyn_newton_I_7} % Traagheid
+\input{./lib/dyn_newton_I_8} % Aarde en appel
+\input{./lib/dyn_theorie_2} % Dynamica EVRB
+\input{./lib/dyn_theorie_3}
 
 
 \section{Newton Toepassingen}
