--- a/6dejaar/kinematica/knmtc_2dim_intro.tex
+++ b/6dejaar/kinematica/knmtc_2dim_intro.tex
@@ -1,5 +1,5 @@
 \documentclass{ximera}
-\input{../preamble}
+\input{../../preamble}
 
 \addPrintStyle{..}
 
@@ -8,16 +8,13 @@
 	\xmtitle{Inleiding}{}
     \xmsource\xmuitleg
 
-	%% \chapter{Tweedimensionale bewegingen}
-
-	Als we in een vlak bewegen, hebben we te maken met een tweedimensionale beweging. 
-	Om ze te beschrijven voeren we nu een referentiestelsel met twee assen in. In de regel kiezen we een cartesiaans assenstelsel.  Door de coördinaten $(x,y)$ van een punt dat het bewegende object voorstelt te geven, kunnen we de positie beschrijven. We kunnen echter ook een vector gebruiken.
+	Als we in een vlak bewegen, hebben we te maken met een tweedimensionale beweging. Ten opzichte van een referentiestelsel met twee assen, kunnen we de beweging beschrijven.
 	\begin{image}
-	
-	\includegraphics[width=.7\textwidth]{sterrentrajecten}
+		\includegraphics[width=.7\textwidth]{sterrentrajecten}
 	\end{image}
 	\captionof{figure}{Sterrentrajecten aan de hemel}
-
-	Omdat we om de snelheid van het object te kunnen beschrijven niet voldoende hebben aan alleen maar de grootte maar ook nood hebben aan een richting, maken we nu expliciet gebruik van vectoren en hun geschikte eigenschappen. Naast een nieuwe as voor de extra dimensie is het gebruik van vectoren de enige aanpassing die we aan ons formalisme van de kinematica moeten doen om bewegingen in twee dimensies te kunnen beschrijven.
+	We behandelen twee concrete bewegingen in dit hoofdstuk, de horizontale worp en de eenparig cirkelvormige beweging.
 	
 \end{document}
+
+% \todo{Hoe zit het met poolcoördinaten? Die zijn niet te gebruiken als referentiestelsel \ldtos?}
