--- a/semester1.tex
+++ b/semester1.tex
@@ -32,7 +32,6 @@
 
 
 
-
 \part{Basisbegrippen van de kinematica}
 
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_intro.tex}
@@ -43,6 +42,7 @@
 \activitychapter{6dejaar/kinematica/knmtc_bgrppn_oef.tex}
 
 
+
 \part{Eendimensionale bewegingen}
 
 \activitychapter{6dejaar/kinematica/knmtc_1dim_intro.tex}
@@ -50,14 +50,18 @@
 \activitychapter{6dejaar/kinematica/knmtc_1dim_EVRB_calculus.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_oplossingsstrategie.tex}
 \activitychapter{6dejaar/kinematica/knmtc_1dim_verticale_worp.tex}
+\activitychapter{6dejaar/kinematica/knmtc_1dim_oef.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_denkvragen.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken.tex}
+\activitysection{6dejaar/kinematica/knmtc_1dim_oef_vraagstukken_valbeweging.tex}
 
 
 
 \part{Tweedimensionale bewegingen}
 
-
 \activitychapter{6dejaar/kinematica/knmtc_2dim_intro.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_onafhankelijkheidsbeginsel.tex}
+% \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} \todo{Moet hier weg. Eigenschap snelheid raakt aan de baan > basisbegrippen. Ook voorbeeld naar basisbegrippen}
 % \activitychapter{6dejaar/kinematica/knmtc_2dim_begrippen.tex} %keuze gemaakt alles naar basisbegrippen 
 \activitychapter{6dejaar/kinematica/knmtc_2dim_eenparige_cirkelbeweging.tex}
 \activitychapter{6dejaar/kinematica/knmtc_2dim_horizontale_worp.tex}
@@ -85,7 +89,6 @@
 
 
 
-
 % \part{De gravitatiekracht}
 
 % \activitychapter{6dejaar/grvt_kepler.tex}
@@ -106,9 +109,6 @@
 % \activitychapter{6dejaar/ae_pot_referentiepunt.tex}
 % \activitychapter{6dejaar/ae_pot_potentiele_energie.tex}
 % \activitychapter{6dejaar/ae_behoud.tex}
-
-
-
 
 
 
